tests/baselines/reference/commentOnAmbientModule.errors.txt
a.ts(7,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
a.ts(12,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
b.ts(2,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== b.ts (1 errors) ====
    ///<reference path="a.ts"/>
    declare module E {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        class foobar extends D.bar {
            foo();
        }
    }
==== a.ts (2 errors) ====
    /*!=========
        Keep this pinned comment
       =========
    */
    
    /*! Don't keep this pinned comment */
    declare module C {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function foo();
    }
    
    // Don't keep this comment.
    declare module D {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        class bar { }
    }
    